# Argon

./: .gitignore  CMakeLists.txt  README.md
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
sandbox/: main.cpp  sandbox.cpp  sandbox.h
sandbox/assets/: test.atlas
src/gfx/: camera2d.h  camera_controller2d.cpp  camera_controller2d.h
src/input/: actions.h  input_map.h
src/math/: mat4.h  transform.h
src/platform/: window.cpp  window.h
src/renderer/: imgui_pass2d.cpp  imgui_pass2d.h  material2d.h  material_handle.h  material_library.cpp  material_library.h  mesh.cpp  mesh.h  render_frame2d.h  render_packet2d.h  render_pass2d.cpp  render_pass2d.h  render_pipeline2d.cpp  render_pipeline2d.h  render_state_cache.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite_batcher.cpp  sprite_batcher.h  texture2d.cpp  texture2d.h  texture_atlas.cpp  texture_atlas.h
src/scene/: animation2d.h  entity.h  frame_context.h  scene.cpp  scene.h
src/systems/: camera_system.cpp  camera_system.h  movement_system.cpp  movement_system.h  render_system2d.cpp  render_system2d.h
